syntax = "proto3";

package statistics;
option go_package = "./statistics";

message Empty {}

message GetUserStatisticsResponse {
  int64 id = 1;
  int32 total_users = 2;
}

message GetTaskStatisticsResponse {
  int64 id = 1;
  int32 total_tasks = 2;
}

service StatisticsService {
  rpc GetUserStatistics(Empty) returns(GetUserStatisticsResponse);
  rpc GetTaskStatistics(Empty) returns(GetTaskStatisticsResponse);
}
